[package]
name = "midstring"
version = "0.1.3"
edition = "2021"
description = "Create a string between two other strings, that is lexicographically halfway between them."
license = "MIT"
authors = ["Shamim Keshani <sh.keshani@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jeot/midstring"
keywords = ["midstring", "lexicographically", "lexical"]


[dependencies]
